# serializer version: 1
# name: test_gwrlink_create
  dict({
    'data': dict({
      'attributes': dict({
        'context': dict({
          'some-attr': 'some value',
          'some-int-attr': 23,
        }),
        'eproid': 'foo',
        'local-id': 'bar',
      }),
      'id': '9dd4e461-268c-8034-f5c8-564e155c67a6',
      'type': 'gwr-links',
    }),
  })
# ---
# name: test_gwrlink_list
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'context': dict({
          }),
          'eproid': 'generation-maybe',
          'local-id': 'capital-loss-learn',
        }),
        'id': 'f561aaf6-ef0b-f14d-4208-bb46a4ccb3ad',
        'type': 'gwr-links',
      }),
      dict({
        'attributes': dict({
          'context': dict({
          }),
          'eproid': 'run-too-successful',
          'local-id': 'decision-create',
        }),
        'id': '9dd4e461-268c-8034-f5c8-564e155c67a6',
        'type': 'gwr-links',
      }),
      dict({
        'attributes': dict({
          'context': dict({
          }),
          'eproid': 'lot-song-light',
          'local-id': 'education-art-apply',
        }),
        'id': '9336ebf2-5087-d91c-818e-e6e9ec29f8c1',
        'type': 'gwr-links',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/linker/gwr-links?page%5Bnumber%5D=1',
      'last': 'http://testserver/api/v1/linker/gwr-links?page%5Bnumber%5D=1',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 3,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_gwrlink_patch
  dict({
    'data': dict({
      'attributes': dict({
        'context': dict({
          'some-attr': 'some value',
          'some-int-attr': 23,
        }),
        'eproid': 'foo',
        'local-id': 'bar',
      }),
      'id': '9dd4e461-268c-8034-f5c8-564e155c67a6',
      'type': 'gwr-links',
    }),
  })
# ---
# name: test_gwrlink_retrieve
  dict({
    'data': dict({
      'attributes': dict({
        'context': dict({
        }),
        'eproid': 'note-act-source',
        'local-id': 'safe-follow-glass',
      }),
      'id': '9dd4e461-268c-8034-f5c8-564e155c67a6',
      'type': 'gwr-links',
    }),
  })
# ---
